Fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ header {
   display: block;
   box-sizing: border-box;
   padding: 1rem;
+  scrollbar-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0);
+  overflow-y: visible;
+  overflow-x: hidden;
 }
 
 .input-container {
@@ -55,7 +58,7 @@ header {
 }
 
 .headline {
-  color: rgb(202, 202, 202);
+  color: rgb(218, 218, 218);
   grid-row: 1;
 }
 
